--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -50,9 +50,11 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="home"><img src="img/primalogo.png"> </a>
+            <a class="navbar-brand hidden-xs hidden-sm" href="home"><img src="img/primalogo.png"> </a>
+            <a class="navbar-brand hidden-md hidden-lg" href="home">PRIMA 2017</a>
 
         </div>
+
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="program">Program</a></li>
@@ -66,6 +68,8 @@
         </div><!--/.nav-collapse -->
     </div>
 </nav>
+
+
 {% block content %}
 
     {# Content #}
@@ -76,32 +80,59 @@
     <footer class="footer">
 
         <div class="row text-center">
-            <div class="col-md-1">
+            <div class="col-md-1 hidden-xs hidden-sm">
                <a href="https://www.unam.mx/"><img src="img/unam-logo.png" class="img-responsive logo"></a>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-1 hidden-md hidden-lg">
+                <a href="https://www.unam.mx/">UNAM</a>
+            </div>
+            <div class="col-md-2 hidden-xs hidden-sm">
                <a href="http://www.matem.unam.mx/"> <img src="img/im-logo.png" class="img-responsive logo"></a>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-1 hidden-md hidden-lg">
+                <a href="https://www.unam.mx/">INSTITUTO DE MATEMÁTICAS</a>
+            </div>
+            <div class="col-md-2 hidden-xs">
                 <a href="http://www.matmor.unam.mx"><img src="img/ccm-logo.png" class="img-responsive logo"></a>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-1 hidden-md hidden-lg">
+                <a href="https://www.unam.mx/">CENTRO DE CIENCIAS MATEMÁTICAS</a>
+            </div>
+            <div class="col-md-1 hidden-xs">
                 <a href="http://www.amc.unam.mx/"><img src="img/academia-logo.png" class="img-responsive logo"></a>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-1 hidden-md hidden-lg">
+                <a href="https://www.unam.mx/">ACADEMIA MEXICANA DE CIENCIAS</a>
+            </div>
+            <div class="col-md-1 hidden-xs">
                 <a href="http://www.itoaxaca.edu.mx/"><img src="img/tecoax-logo.png" class="img-responsive logo"></a>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-1 hidden-md hidden-lg">
+                <a href="https://www.unam.mx/">TECNOLÓGICO DE OAXACA</a>
+            </div>
+            <div class="col-md-2 hidden-xs">
                 <a href=""><img src="img/cmo-logo.png" class="img-responsive logo"></a>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-1 hidden-md hidden-lg">
+                <a href="https://www.unam.mx/">CASA MATEMÁTICA OAXACA</a>
+            </div>
+            <div class="col-md-1 hidden-xs">
                 <a href="http://www.conacyt.gob.mx/"><img src="img/conacyt-logo.png" class="img-responsive logo"></a>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-1 hidden-md hidden-lg">
+                <a href="https://www.unam.mx/">CONACYT</a>
+            </div>
+            <div class="col-md-1 hidden-xs">
                 <a href="http://www.primath.org/"><img src="img/prima-logo.png" class="img-responsive logo"></a>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-1 hidden-md hidden-lg">
+                <a href="https://www.unam.mx/">PRIMA</a>
+            </div>
+            <div class="col-md-1 hidden-xs">
                 <a href="http://www.smm.org.mx/"><img src="img/sociedad-logo.png" class="img-responsive logo"></a>
+            </div>
+            <div class="col-md-1 hidden-md hidden-lg">
+                <a href="https://www.unam.mx/">SOCIEDAD MATEMÁTICA MEXICANA</a>
             </div>
         </div>
     </footer>
