Footer Padding menu

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -20,7 +20,7 @@
 
     <div class="container">
 
-        <div class="page-header text-center"><h2>Organizing Committee<h2></div>
+        <div class="page-header text-center"><h2>Organizing Committee<h2> </div>
         <div class="row text-center">
             <div class="col-md-3"><img src="img/FirstPage_rolando.png" alt="..." class="img-thumbnail text-center"><br>
                 <h4 class="text-muted">Rolando Jiménez <br><small>Instituto de Matemáticas, UNAM</small></h4>
@@ -37,28 +37,23 @@
         </div>
 
         <div class="page-header text-center"><h2>Scientific Committee<h2></div>
-        <div class="row text-muted">
-            <div class="col-md-4"><h3>Maria Chudnovsky <br><small>Columbia University</small></h3></div>
-            <div class="col-md-4"><h3>Kenji Fukaya <br><small>Simons Center, Stony Brook</small></h3></div>
-            <div class="col-md-4"><h3>Peter Sarnak <br><small>Princeton</small></h3></div>
-        </div>
-        <div class="row text-muted">
-            <div class="col-md-4"><h3>Jongil Park <br><small>Seoul National University</small></h3></div>
-            <div class="col-md-4"><h3>Kyoji Saito <br><small>Kavli-IPMU, Tokyo</small></h3></div>
-            <div class="col-md-4"><h3>Patricio Felmer <br><small>CMM, Universidad de Chile</small></h3></div>
-        </div>
-        <div class="row text-muted">
-            <div class="col-md-4"><h3>Weinan E <br><small>Peking U/Princeton</small></h3></div>
-            <div class="col-md-4"><h3>Alan Carey <br><small>Aust.National University</small></h3></div>
-            <div class="col-md-4"><h3>Sujatha Ramdorai <br><small>UBC, Canada</small></h3></div>
-        </div>
-        <div class="row text-muted">
-            <div class="col-md-4"><h3>Alberto Verjovsky <br><small>UNAM, Mexico</small></h3></div>
-            <div class="col-md-4"><h3>Hinke Osinga <br><small>University of Auckland</small></h3></div>
-            <div class="col-md-4"><h3>Alice Guionnet <br><small>MIT</small></h3></div>
+        <div align="center">
+            <div><h4>Maria ChudnovskyS <br><small>Columbia University</small></h4></div>
+            <div><h4>Kenji Fukaya <br><small>Simons Center, Stony Brook</small></h4></div>
+            <div><h4>Peter arnak <br><small>Princeton</small></h4></div>
+            <div><h4>Jongil Park <br><small>Seoul National University</small></h4></div>
+            <div><h4>Kyoji Saito <br><small>Kavli-IPMU, Tokyo</small></h4></div>
+            <div><h4>Patricio Felmer <br><small>CMM, Universidad de Chile</small></h4></div>
+            <div><h4>Weinan E <br><small>Peking U/Princeton</small></h4></div>
+            <div><h4>Alan Carey <br><small>Aust.National University</small></h4></div>
+            <div><h4>Sujatha Ramdorai <br><small>UBC, Canada</small></h4></div>
+            <div><h4>Alberto Verjovsky <br><small>UNAM, Mexico</small></h4></div>
+            <div><h4>Hinke Osinga <br><small>University of Auckland</small></h4></div>
+            <div><h4>Alice Guionnet <br><small>MIT</small></h4></div>
         </div>
 
         <div class="page-header text-center"><h2>Location<h2></div>
+        <div>lalalalalalalalalala</div>
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3207.343408476283!2d-96.72601266887976!3d17.06308234772094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c72249df26d9b1%3A0xac88a77657dffc3b!2sOaxaca!5e0!3m2!1sen!2smx!4v1481739618410" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
