--- a/web/css/style.css
+++ b/web/css/style.css
@@ -70,6 +70,11 @@ html, body {
     background: transparent;
     box-shadow: none;
   }
+
+
+  .r
+
+  .r
 }
 @media only screen and (min-width: 1170px) {
   .cd-header {
