--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -76,33 +76,38 @@
     <footer class="footer">
 
         <div class="row text-center">
-            <div class="col-md-1">
-               <a href="https://www.unam.mx/"><img src="img/unam-logo.png" class="img-responsive logo"></a>
+            <div id="logosfooter"class="col-md-10 col-centered">
+                <div class="row">
+
+                        <a href="https://www.unam.mx/"><img src="img/unam-logo.png" class="img-responsive logo"></a>
+
+
+                        <a href="http://www.matem.unam.mx/"> <img src="img/im-logo.png" class="img-responsive logo"></a>
+
+
+                        <a href="http://www.matmor.unam.mx"><img src="img/ccm-logo.png" class="img-responsive logo"></a>
+
+
+                        <a href="http://www.amc.unam.mx/"><img src="img/academia-logo.png" class="img-responsive logo"></a>
+
+
+                        <a href="http://www.itoaxaca.edu.mx/"><img src="img/tecoax-logo.png" class="img-responsive logo"></a>
+
+                        <a href=""><img src="img/cmo-logo.png" class="img-responsive logo"></a>
+
+
+                        <a href="http://www.conacyt.gob.mx/"><img src="img/conacyt-logo.png" class="img-responsive logo"></a>
+
+                        <a href="http://www.primath.org/"><img src="img/prima-logo.png" class="img-responsive logo"></a>
+
+
+                        <a href="http://www.smm.org.mx/"><img src="img/sociedad-logo.png" class="img-responsive logo"></a>
+
+
+                </div>
             </div>
-            <div class="col-md-2">
-               <a href="http://www.matem.unam.mx/"> <img src="img/im-logo.png" class="img-responsive logo"></a>
-            </div>
-            <div class="col-md-2">
-                <a href="http://www.matmor.unam.mx"><img src="img/ccm-logo.png" class="img-responsive logo"></a>
-            </div>
-            <div class="col-md-1">
-                <a href="http://www.amc.unam.mx/"><img src="img/academia-logo.png" class="img-responsive logo"></a>
-            </div>
-            <div class="col-md-1">
-                <a href="http://www.itoaxaca.edu.mx/"><img src="img/tecoax-logo.png" class="img-responsive logo"></a>
-            </div>
-            <div class="col-md-2">
-                <a href=""><img src="img/cmo-logo.png" class="img-responsive logo"></a>
-            </div>
-            <div class="col-md-1">
-                <a href="http://www.conacyt.gob.mx/"><img src="img/conacyt-logo.png" class="img-responsive logo"></a>
-            </div>
-            <div class="col-md-1">
-                <a href="http://www.primath.org/"><img src="img/prima-logo.png" class="img-responsive logo"></a>
-            </div>
-            <div class="col-md-1">
-                <a href="http://www.smm.org.mx/"><img src="img/sociedad-logo.png" class="img-responsive logo"></a>
-            </div>
+            <div class="copyright-footer"> Copyright 2017 Centro de Ciencias Matemáticas UNAM</div>
+
         </div>
     </footer>
 {% endblock %}
