--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="page-header prima-title">PLENARY SPEAKERS</div>
 
-        <div class="row">
+        <div class="row text-center">
             <div class="col-md-3">
                 <img src="img/speakers/AnaAmador.jpg" class="img-responsive img-thumbnail"><br>
                 <h4>Ana Amador<br><small>University</small></h4>
@@ -23,53 +23,53 @@
                 <h4>David Brydges<br><small>University</small></h4>
             </div>
         </div>
-        <div class="page-header"></div>
-        <div class="row">
+        <h1></h1>
+        <div class="row text-center">
 
             <div class="col-md-3">
-                <img src="img/speakers/Duke.png" class="img-responsive"><br>
+                <img src="img/speakers/Duke.png" class="img-responsive img-thumbnail"><br>
                 <h4>Duke<br><small>University</small></h4>
             </div>
             <div class="col-md-3">
-                <img src="img/speakers/FernandoCodaMarques.jpg" class="img-responsive">
+                <img src="img/speakers/FernandoCodaMarques.jpg" class="img-responsive img-thumbnail">
                 <h4>Fernando Coda Marques<br><small>University</small></h4>
             </div>
             <div class="col-md-3">
-                <img src="img/speakers/GeoffWhittle.gif" class="img-responsive">
+                <img src="img/speakers/GeoffWhittle.gif" class="img-responsive img-thumbnail">
                 <h4>Geoff Whittle<br><small>University</small></h4>
             </div>
             <div class="col-md-3">
-                <img src="img/speakers/HeeOh.jpg" class="img-responsive"><br>
+                <img src="img/speakers/HeeOh.jpg" class="img-responsive img-thumbnail"><br>
                 <h4>Hee Oh<br><small>University</small></h4>
             </div>
         </div>
-        <div class="page-header"></div>
-        <div class="row">
+        <h1></h1>
+        <div class="row text-center">
             <div class="col-md-3">
-                <img src="img/speakers/HirakuNakajima.jpg" class="img-responsive"><br>
+                <img src="img/speakers/HirakuNakajima.jpg" class="img-responsive img-thumbnail"><br>
                 <h4>Hiraku Nakajima<br><small>University</small></h4>
             </div>
             <div class="col-md-3">
-                <img src="img/speakers/IanAgol.jpg" class="img-responsive">
+                <img src="img/speakers/IanAgol.jpg" class="img-responsive img-thumbnail">
                 <h4>Ian Agol<br><small>University</small></h4>
             </div>
             <div class="col-md-3">
-                <img src="img/speakers/KerryLandman.jpg" class="img-responsive"><br>
+                <img src="img/speakers/KerryLandman.jpg" class="img-responsive img-thumbnail"><br>
                 <h4>Kerry Landman<br><small>University</small></h4>
             </div>
             <div class="col-md-3">
-                <img src="img/speakers/LexingYing.jpg" class="img-responsive"><br>
+                <img src="img/speakers/LexingYing.jpg" class="img-responsive img-thumbnail"><br>
                 <h4>LexingYing<br><small>University</small></h4>
             </div>
         </div>
-        <div class="page-header"></div>
-        <div class="row">
+        <h1></h1>
+        <div class="row text-center">
             <div class="col-md-3 col-md-offset-3">
-                <img src="img/speakers/ManuelDelPino.jpeg" class="img-responsive"><br>
+                <img src="img/speakers/ManuelDelPino.jpeg" class="img-responsive img-thumbnail"><br>
                 <h4>Manuel del Pino<br><small>University</small></h4>
             </div>
             <div class="col-md-3">
-                <img src="img/speakers/Maryam-Mirzajani.jpg" class="img-responsive">
+                <img src="img/speakers/Maryam-Mirzajani.jpg" class="img-responsive img-thumbnail">
                 <h4>Maryam Mirzajani<br><small>University</small></h4>
             </div>
         </div>
