- Logotipos Landing - H4 Plenarios - Banner inicio

--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand hidden-xs hidden-sm" href="home"><img src="img/primalogo.png"> </a>
+            <a class="navbar-brand hidden-xs hidden-sm" href="home"><img src="img/primalogo.png" height="80%"> </a>
             <a class="navbar-brand hidden-md hidden-lg" href="home">PRIMA 2017</a>
 
         </div>
