--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -9,6 +9,9 @@
 
             </div>
         </div>#}
+    <section class="cta-section text-center">
+
+    </section>
     <div class="prima-banner">
         <div class="row">
             <div class="col-md-4 col-md-offset-6">
@@ -21,7 +24,7 @@
     <div class="container">
 
         <div class="page-header text-center"><h2>Organizing Committee<h2> </div>
-        <div class="row text-center">
+        <div class="row text-center plenary">
             <div class="col-md-3"><img src="img/FirstPage_rolando.png" alt="..." class="img-thumbnail text-center"><br>
                 <h4 class="text-muted">Rolando Jiménez <br><small>Instituto de Matemáticas, UNAM</small></h4>
             </div>
@@ -55,7 +58,7 @@
         <div class="page-header text-center"><h2>Location<h2></div>
         <div>lalalalalalalalalala</div>
     </div>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3207.343408476283!2d-96.72601266887976!3d17.06308234772094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c72249df26d9b1%3A0xac88a77657dffc3b!2sOaxaca!5e0!3m2!1sen!2smx!4v1481739618410" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3207.343408476283!2d-96.72601266887976!3d17.06308234772094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c72249df26d9b1%3A0xac88a77657dffc3b!2sOaxaca!5e0!3m2!1sen!2smx!4v1481739618410" width="100%" height="450" frameborder="0" style="border:0" scrolling="no" allowfullscreen></iframe>
 
     {#<div class="container prima-content">
     <p class="text-justify">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca,
