--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="page-header prima-title">PLENARY SPEAKERS</div>
 
-        <div class="row text-center">
+        <div class="row text-center plenary">
             <div class="col-md-3">
                 <img src="img/speakers/AnaAmador.jpg" class="img-responsive img-thumbnail"><br>
                 <h4>Ana Amador<br><small>University</small></h4>
@@ -24,7 +24,7 @@
             </div>
         </div>
         <h1></h1>
-        <div class="row text-center">
+        <div class="row text-center plenary">
 
             <div class="col-md-3">
                 <img src="img/speakers/Duke.png" class="img-responsive img-thumbnail"><br>
@@ -44,7 +44,7 @@
             </div>
         </div>
         <h1></h1>
-        <div class="row text-center">
+        <div class="row text-center plenary">
             <div class="col-md-3">
                 <img src="img/speakers/HirakuNakajima.jpg" class="img-responsive img-thumbnail"><br>
                 <h4>Hiraku Nakajima<br><small>University</small></h4>
@@ -63,7 +63,7 @@
             </div>
         </div>
         <h1></h1>
-        <div class="row text-center">
+        <div class="row text-center plenary">
             <div class="col-md-3 col-md-offset-3">
                 <img src="img/speakers/ManuelDelPino.jpeg" class="img-responsive img-thumbnail"><br>
                 <h4>Manuel del Pino<br><small>University</small></h4>
