--- a/views/landing.html.twig
+++ b/views/landing.html.twig
@@ -21,7 +21,19 @@
 <body class="cd-intro">
 <br>
 <div class="row text-center">
-    <div class="col-md-1  col-md-offset-1 hidden-sm hidden-xs">
+    <div class="col-md-11 col-md-offset-1 footer col-centered hidden-sm hidden-xs">
+         <img src="img/unam-logo.png" class="img-responsive logo">
+        <img src="img/im-logo.png" class="img-responsive logo">
+        <img src="img/ccm-logo.png" class="img-responsive logo">
+        <img src="img/academia-logo.png" class="img-responsive logo">
+        <img src="img/tecoax-logo.png" class="img-responsive logo">
+        <img src="img/cmo-logo.png" class="img-responsive logo">
+        <img src="img/conacyt-logo.png" class="img-responsive logo">
+        <img src="img/prima-logo.png" class="img-responsive logo">
+        <img src="img/sociedad-logo.png" class="img-responsive logo">
+    </div>
+
+    {#<div class="col-md-1  col-md-offset-1 hidden-sm hidden-xs">
         <img src="img/unam-logo.png" class="img-responsive center-block">
     </div>
     <div class="col-md-1 hidden-sm hidden-xs">
@@ -47,7 +59,7 @@
     </div>
     <div class="col-md-1 hidden-xs hidden-sm">
         <img src="img/sociedad-logo.png" class="img-responsive center-block" >
-    </div>
+    </div>#}
 </div>
 
 
@@ -75,8 +87,8 @@
         <li><a href="plenary-speakers">Plenary Speakers</a></li>
 
 
-        <li><a href="#finantial-assistance">Finantial Assistance</a></li>
-        <li><a href="#0">Sponsors</a></li>
+        <li><a href="financial-assistance">Finantial Assistance</a></li>
+        <li><a href="sponsors">Sponsors</a></li>
         <li><a href="oaxaca">Oaxaca</a></li>
 
         <li><a href="contact">Contact</a></li>
@@ -99,7 +111,7 @@
 </div>
 
 <div class="intro-btn">
-    <a href="home" class="btn btn-primary-outline" role="button">Entrar</a>
+    <a href="home" class="btn btn-primary-outline" role="button">Enter</a>
 </div>
 
 
