--- a/web/css/ccm.css
+++ b/web/css/ccm.css
@@ -65,9 +65,8 @@ body {
     color: #ffffff;
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-    height: 280px;
+    height: 380px;
     font-size: 18px;
-    margin-top: 20px;
 }
 
 .prima-header {
@@ -94,11 +93,10 @@ body {
 
 .navbar-default .navbar-nav > li > a {
     color: #6db7ca;
-    font-size: 18px;
-    padding-top: 32px;
+    font-size: 16px;
+    padding-top: 35px;
+    /*padding-top: 32px;*/
 }
-
-
 
 .cd-primary-nav {
     background: rgba(42, 108, 118, 0.88) none repeat scroll 0 0;
@@ -174,6 +172,10 @@ body {
     border-color: #ffffff;
 }
 
+.navbar-brand {
+    height: 120px;
+}
+
 .page-header {
     border-bottom: 0px;
     margin: 80px 0 20px;
@@ -230,3 +232,19 @@ h4{
     color:#5E5E5E;
 }
 
+.plenary h4 {
+    color: #6DB7C2;
+}
+
+.img-thumbnail {
+    border: 3px solid yellow;
+    padding: 0px;
+}
+
+.cta-section {
+    background: #253340 url("../img/FirstPage_alebrije.png") no-repeat scroll left top / cover ;
+    border: medium none;
+    color: #fff;
+    min-height: 420px;
+    padding-top: 10px;
+}
