- Programa general - Speakers

--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -2,25 +2,29 @@
 
 {% block content %}
 
-    <div class="container">
+    <div class="container" xmlns="http://www.w3.org/1999/html">
         <div class="page-header prima-title">PLENARY SPEAKERS</div>
 
         <div class="row text-center plenary">
             <div class="col-md-3">
                 <img src="img/speakers/AnaAmador.jpg" class="img-responsive img-thumbnail"><br>
-                <h4>Ana Amador<br><small>University</small></h4>
+                <h4>Ana Amador <small>Universidad de Buenos Aires, Argentina</small></h4>
+                <span class="text-muted"><small><em>Applied dynamical systems/bird songs</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/AlexeyBondal.jpg" class="img-responsive img-thumbnail"><br>
-                <h4>Alexey Bondal<br><small>University</small></h4>
+                <h4>Alexey Bondal <small>Kavli IPMU (Tokyo) & Steklov Institute</small></h4>
+                <span class="text-muted"><small><em>Geometry & physics</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/ChenyangXu.jpeg" class="img-responsive img-thumbnail">
-                <h4>Chenyang Xu<br><small>University</small></h4>
+                <h4>Chenyang Xu <small>Peking University</small></h4>
+                <span class="text-muted"><small><em>Algebraic geometry</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/DavidBrydges.jpg" class="img-responsive img-thumbnail">
-                <h4>David Brydges<br><small>University</small></h4>
+                <h4>David Brydges <small>UBC, Canada</small></h4>
+                <span class="text-muted"><small><em>Probability and math physics</em></small></span>
             </div>
         </div>
         <h1></h1>
@@ -28,49 +32,59 @@
 
             <div class="col-md-3">
                 <img src="img/speakers/Duke.png" class="img-responsive img-thumbnail"><br>
-                <h4>Duke<br><small>University</small></h4>
+                <h4>Duke <small>UCLA</small></h4>
+                <span class="text-muted"><small><em>Number theory</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/FernandoCodaMarques.jpg" class="img-responsive img-thumbnail">
-                <h4>Fernando Coda Marques<br><small>University</small></h4>
+                <h4>Fernando Coda Marques <small>Princeton</small></h4>
+                <span class="text-muted"><small><em>Geometric analysis</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/GeoffWhittle.gif" class="img-responsive img-thumbnail">
-                <h4>Geoff Whittle<br><small>University</small></h4>
+                <h4>Geoff Whittle <small>Victoria University, New Zealand</small></h4>
+                <span class="text-muted"><small><em>Matroid theory</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/HeeOh.jpg" class="img-responsive img-thumbnail"><br>
-                <h4>Hee Oh<br><small>University</small></h4>
+                <h4>Hee Oh <small>Yale</small></h4>
+                <span class="text-muted"><small><em>Dynamical systems</em></small></span>
             </div>
         </div>
         <h1></h1>
         <div class="row text-center plenary">
             <div class="col-md-3">
                 <img src="img/speakers/HirakuNakajima.jpg" class="img-responsive img-thumbnail"><br>
-                <h4>Hiraku Nakajima<br><small>University</small></h4>
+                <h4>Hiraku Nakajima <small>RIMS Kyoto Japan</small></h4>
+                <span class="text-muted"><small><em>Repr theory/math phys</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/IanAgol.jpg" class="img-responsive img-thumbnail">
-                <h4>Ian Agol<br><small>University</small></h4>
+                <h4>Ian Agol <small>Berkeley</small></h4>
+                <span class="text-muted"><small><em>Topology</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/KerryLandman.jpg" class="img-responsive img-thumbnail"><br>
-                <h4>Kerry Landman<br><small>University</small></h4>
+                <h4>Kerry Landman <small>University of Melbourne, Australia</small></h4>
+                <span class="text-muted"><small><em>Models for appl. biology & tissue eng</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/LexingYing.jpg" class="img-responsive img-thumbnail"><br>
-                <h4>LexingYing<br><small>University</small></h4>
+                <h4>Lexing Ying <small>Stanford</small></h4>
+                <span class="text-muted"><small><em>Scientific computing</em></small></span>
             </div>
         </div>
         <h1></h1>
         <div class="row text-center plenary">
             <div class="col-md-3 col-md-offset-3">
                 <img src="img/speakers/ManuelDelPino.jpeg" class="img-responsive img-thumbnail"><br>
-                <h4>Manuel del Pino<br><small>University</small></h4>
+                <h4>Manuel del Pino <small>U. de Chile</small></h4>
+                <span class="text-muted"><small><em>PDE</em></small></span>
             </div>
             <div class="col-md-3">
                 <img src="img/speakers/Maryam-Mirzajani.jpg" class="img-responsive img-thumbnail">
-                <h4>Maryam Mirzajani<br><small>University</small></h4>
+                <h4>Maryam Mirzajani <small>Stanford</small></h4>
+                <span class="text-muted"><small><em>Teichmuller theory, hyperbolic geometry</em></small></span>
             </div>
         </div>
         <div class="page-header"></div>
