--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -8,10 +8,10 @@
                 <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
 
             </div>
-        </div>#}
+        </div>
     <section class="cta-section text-center">
-
     </section>
+#}
     <div class="prima-banner">
         <div class="row">
             <div class="col-md-4 col-md-offset-6">
@@ -56,7 +56,7 @@
         </div>
 
         <div class="page-header text-center"><h2>Location<h2></div>
-        <div>lalalalalalalalalala</div>
+
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3207.343408476283!2d-96.72601266887976!3d17.06308234772094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c72249df26d9b1%3A0xac88a77657dffc3b!2sOaxaca!5e0!3m2!1sen!2smx!4v1481739618410" width="100%" height="450" frameborder="0" style="border:0" scrolling="no" allowfullscreen></iframe>
 
