--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -110,6 +110,7 @@
 #}
                     <!-- Nav tabs -->
                     <ul class="nav nav-pills nav-justified" role="tablist">
+                        {#<li role="presentation" class="active"><a href="#sunday" aria-controls="sunday" role="tab" data-toggle="pill">Sunday 13</a></li>#}
                         <li role="presentation" class="active"><a href="#monday" aria-controls="monday" role="tab" data-toggle="pill">Monday 14</a></li>
                         <li role="presentation"><a href="#tuesday" aria-controls="tuesday" role="tab" data-toggle="pill">Tuesday 15</a></li>
                         <li role="presentation"><a href="#wednesday" aria-controls="wednesday" role="tab" data-toggle="pill">Wednesday 16</a></li>
@@ -119,6 +120,14 @@
                     <h1></h1>
                     <!-- Tab panes -->
                     <div class="tab-content">
+                        {#<div role="tabpanel" class="tab-pane active" id="sunday">
+                            <div class="panel panel-timeline text-center">
+                                <div class="panel-heading"><strong>15:00-19:30</strong></div>
+                                <div class="panel-body">
+                                    <h4>REGISTRATION AND WELCOME RECEPTION</h4>
+                                </div>
+                            </div>
+                        </div>#}
                         <div role="tabpanel" class="tab-pane active" id="monday">
                             {# Monday content
                             <div class="page-header"><h3>Monday, 14 August</h3></div>#}
