--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -11,12 +11,76 @@
         </div>
     <section class="cta-section text-center">
     </section>
-#}
+
     <div class="prima-banner">
         <div class="row">
             <div class="col-md-4 col-md-offset-6">
                 <h3>PRIMA 2017</h3>
                 <p>The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
+            </div>
+        </div>
+    </div>
+#}
+    <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img class="first-slide" src="img/alebrije-banner1.png" alt="First slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Welcome Message</h1>
+                <p class="lead">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca, Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences institutes, departments and societies from around the Pacific Rim, established in 2005 with the aim of promoting and facilitating the development of the mathematical sciences throughout the Pacific Rim region.</p>
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="second-slide" src="img/alebrije-banner2.png" alt="Second slide">
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>CALL FOR PROPOSALS FOR SATELLITE EVENTS TO PRIMA 2017 OAXACA, MEXICO<br><small>August 14-18 2017</small></h1>
+              <p><button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#satelliteModal">Learn more</button></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+    <!-- /.carousel -->
+
+
+    <!-- Modal -->
+    <div class="modal fade " id="satelliteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">SATELLITE EVENTS TO PRIMA 2017 OAXACA, MEXICO</h4>
+                </div>
+                <div class="modal-body">
+                    <h4>CALL FOR PROPOSALS FOR SATELLITE EVENTS TO PRIMA 2017 OAXACA, MEXICO<br><small>
+                    August 14-18 2017</small></h4>
+
+                    <p>PRIMA2017 is on its way, the organization is going smoothly and preparations are already under way to have an excellent experience in Oaxaca in August 2017. As in similar events, this is a great opportunity to gather specialists from all over the world.</p>
+                    <p>The Organizing Committee calls for applications for financial assistance to organize a satellite conference to PRIMA2017, this may be on close dates before or after the event in Oaxaca and may be anywhere in México. Please submit a proposal explaining the title and areas to be covered by the conference, a brief exposition of the importance of the área and a list of tentative invited speakers and expected number of participants. The proposal must include: title of the conference, organizers and a contact organizar. The proposals must be sent to:
+                    <strong>Dr. Daniel Juan</strong> <em>daniel<i class="fa fa-at" aria-hidden="true"></i>matmor.unam.mx</em>, and <strong>Dr. Jose Seade</strong> <em>jseade<i class="fa fa-at" aria-hidden="true"></i>im.unam.mx</em>.<br><br>
+                    Deadline for submissions: January 31st 2017.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
@@ -59,15 +123,6 @@
 
     </div>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3207.343408476283!2d-96.72601266887976!3d17.06308234772094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c72249df26d9b1%3A0xac88a77657dffc3b!2sOaxaca!5e0!3m2!1sen!2smx!4v1481739618410" width="100%" height="450" frameborder="0" style="border:0" scrolling="no" allowfullscreen></iframe>
-
-    {#<div class="container prima-content">
-    <p class="text-justify">The Third Pacific Rim Mathematical Association (PRIMA) Congress will take place in Oaxaca,
-        Mexico from August 14th till August 18th of 2017. PRIMA is an association of mathematical sciences
-        institutes, departments and societies from around the Pacific Rim, established in 2005 with the
-        aim of promoting and facilitating the development of the mathematical sciences throughout the
-        Pacific Rim region.
-    </p>
-</div>#}
 
 {% endblock %}
 
