- Plenary Speakers - Banner Oaxaca

--- a/views/oaxaca.html.twig
+++ b/views/oaxaca.html.twig
@@ -3,7 +3,19 @@
 {% block content %}
 
     <div class="oaxaca-banner">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5 col-md-offset-7">
+                    <h1></h1>
+                    <h1>Oaxaca</h1>
+                    <p class="text-left">
+                        <h4>
+                        Oaxaca (pronounced wa-hah-kah), founded in 1532, is a city located about 400km south of Mexico City, is the capital of the state of the same name. It has a mild climate, due to its altitude of 1555m above sea level. Rich in history and culture, Oaxaca is a fascinating destination, sometimes considered "Mexico's culinary and art capital". Archeology, ancient civilizations, colonial art and architecture, can be appreciated. It is a safe city, full with vibrant cultural traditions.
+                        </h4>
+                    </p>
+                </div>
+            </div>
+        </div>
 
     </div>
 
