--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -78,7 +78,7 @@
 
 {% block footer %}
     <footer class="footer">
-
+    <div class="container">
         <div class="row text-center">
 
             <div id="logosfooter"class="col-md-10 col-centered">
@@ -106,11 +106,17 @@
 
 
                         <a href="http://www.smm.org.mx/"><img src="img/sociedad-logo.png" class="img-responsive logo"></a>
-
             </div>
-            <div class="copyright-footer"> Copyright 2017 Centro de Ciencias Matemáticas UNAM</div>
+            <div class="col-md-12">
+                <h1></h1>
+                <a href="https://www.facebook.com/PRIMA2017Oaxaca/"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a> <a href="https://twitter.com/PRIMAoaxaca"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+            </div>
+            <div class="copyright-footer">  Copyright 2017 Centro de Ciencias Matemáticas UNAM</div>
 
         </div>
+        <div class="row">
+        </div>
+    </div>
     </footer>
 {% endblock %}
 
