--- a/views/landing.html.twig
+++ b/views/landing.html.twig
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="no-js">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,8 +19,8 @@
 </head>
 <body class="cd-intro">
     <br>
-    <div class="row text-center">
-        <div class="col-md-11 col-md-offset-1 footer col-centered hidden-sm hidden-xs">
+    <div class="row text-center hidden-sm hidden-xs">
+        <div class="col-md-11 col-md-offset-1 footer col-centered">
             <img src="img/unam-logo.png" class="img-responsive logo">
             <img src="img/im-logo.png" class="img-responsive logo">
             <img src="img/ccm-logo.png" class="img-responsive logo">
